# HMS_MCP_SERVER

./: .gitignore  README.md  pyproject.toml
gen-py/hive_metastore/: ThriftHiveMetastore-remote  ThriftHiveMetastore.py  constants.py  ttypes.py
hivemind/: __init__.py  hivemind_server.py  hms_client.py  requirements.txt
hivemind/tools/: __init__.py  discovery.py  sql_gen.py
tests/: __init__.py  test_discovery.py  test_hms_client.py  test_integration.py
