[project]
name = "hivemind-mcp"
version = "0.1.0"
description = "MCP server for Apache Hive Metastore — read-only discovery tools (list DBs/tables, schema, stats, partitions, DDL) for AI agents."
readme = "README.md"
requires-python = "==3.14.4"
keywords = ["mcp", "hive", "hive-metastore", "hms", "thrift", "cursor", "fastmcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
]
dependencies = [
    "fastmcp>=2.0",
    "thrift>=0.20",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hivemind-mcp = "hivemind.hivemind_server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hivemind"]
